# pyupgrade-directories

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  docs_test_action.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  requirements.txt
pyupgrade_directories/: __init__.py  __main__.py
tests/: test_pyup_dirs.py
