[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyupgrade-directories"
version = "0.2.0"
description = "Run pyupgrade on all files in a directory, and optionally recursively."
readme = "README.rst"
keywords = [ "pyupgrade", "utility", "linting",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/pyupgrade-directories"
"Issue Tracker" = "https://github.com/domdfcoding/pyupgrade-directories/issues"
"Source Code" = "https://github.com/domdfcoding/pyupgrade-directories"

[project.scripts]
pyup-dirs = "pyupgrade_directories.__main__:main"
pyup_dirs = "pyupgrade_directories.__main__:main"

[tool.importcheck]
always = [ "pyupgrade_directories", "pyupgrade_directories.__main__",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pyupgrade_directories"

[tool.importcheck.config]
show = true
count = true
