[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyupgrade-directories"
version = "0.3.0"
description = "Run pyupgrade on all files in a directory, and optionally recursively."
readme = "README.rst"
keywords = [ "linting", "pyupgrade", "utility",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/pyupgrade-directories"
"Issue Tracker" = "https://github.com/domdfcoding/pyupgrade-directories/issues"
"Source Code" = "https://github.com/domdfcoding/pyupgrade-directories"

[project.scripts]
pyup-dirs = "pyupgrade_directories.__main__:main"
pyup_dirs = "pyupgrade_directories.__main__:main"

[tool.importcheck]
always = [ "pyupgrade_directories", "pyupgrade_directories.__main__",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pyupgrade_directories"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dep_checker]
allowed_unused = [ "pyupgrade",]

[tool.importcheck.config]
show = true
count = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
