# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * options.entry_points
#     * mypy
[metadata]
name = pyupgrade-directories
description = Run pyupgrade on all files in a directory, and optionally recursively.
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords = pyupgrade, utility, linting
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/pyupgrade-directories
project_urls =
    Documentation = https://pyupgrade-directories.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/pyupgrade-directories/issues
    Source_Code = https://github.com/domdfcoding/pyupgrade-directories
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[options.entry_points]
console_scripts =
    pyup-dirs=pyupgrade_directories.__main__:main
    pyup_dirs=pyupgrade_directories.__main__:main

[mypy]
python_version = 3.6
ignore_missing_imports = True
namespace_packages = True
check_untyped_defs = True
